feat: add metric server and reconfigure developer setup

--- a/clusters/local/infrastructure/kustomization.yaml
+++ b/clusters/local/infrastructure/kustomization.yaml
@@ -13,3 +13,4 @@ resources:
   - kyverno.yaml           # Independent component
   - sealed-secrets.yaml    # Independent component
   - opentelemetry.yaml     # Depends on cert-manager
+  - metric-server.yaml     # Independent component
