chore: fix template typo in manifest files

--- a/platform/components/grafana/releases/11.3.0/grafana.yaml
+++ b/platform/components/grafana/releases/11.3.0/grafana.yaml
@@ -274,8 +274,8 @@ spec:
         app.kubernetes.io/name: grafana
         app.kubernetes.io/instance: grafana
       annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
-        checksum/datasources: {{ include (print $.Template.BasePath "/datasources-configmap.yaml") . | sha256sum }}
+        config.checksum: "grafana-config"
+        datasources.checksum: "grafana-datasources"
     spec:
       serviceAccountName: grafana
       securityContext:
