--- a/platform/components/loki/releases/3.3.0/loki.yaml
+++ b/platform/components/loki/releases/3.3.0/loki.yaml
@@ -128,7 +128,7 @@ spec:
         app.kubernetes.io/instance: loki
         app.kubernetes.io/component: server
       annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+        config.checksum: "loki-config"
     spec:
       serviceAccountName: loki
       securityContext:
