--- a/clusters/local/infrastructure/cluster-scoped-grafana.yaml
+++ b/clusters/local/infrastructure/cluster-scoped-grafana.yaml
@@ -2,23 +2,20 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: grafana
+  name: cluster-scoped-grafana-operator
   namespace: flux-system
 spec:
   interval: 10m
-  path: ./platform/components/grafana/releases/11.3.0/
+  path: ./platform/components/grafana-operator/5.19.0/overlays/cluster_scoped/
   prune: true
   wait: true
   timeout: 5m
   sourceRef:
     kind: GitRepository
     name: flux-system
-  dependsOn:
-    - name: loki
-    - name: tempo
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
-      name: grafana
-      namespace: observability
+      name: grafana-operator-controller-manager
+      namespace: grafana
 
