chore: wip commit

--- a/clusters/local/infrastructure/kustomization.yaml
+++ b/clusters/local/infrastructure/kustomization.yaml
@@ -8,9 +8,9 @@ metadata:
 
 resources:
   - cert-manager.yaml       # Base dependency
-  - cnpg.yaml              # Independent component
-  - kyverno.yaml           # Independent component
-  - sealed-secrets.yaml    # Independent component
   - opentelemetry.yaml     # Depends on cert-manager
+  # - cnpg.yaml              # Independent component
+  # - kyverno.yaml           # Independent component
+  # - sealed-secrets.yaml    # Independent component
   - metric-server.yaml     # Independent component
   - cluster-scoped-grafana.yaml  # Independent component
