fix: Add KIND-specific metrics-server patch for kubelet TLS
- Add --kubelet-insecure-tls flag to bypass TLS validation
- Required for KIND clusters where kubelet certs lack IP SANs
- Fixes x509: cannot validate certificate errors

--- a/clusters/local/overlay/ron-mallory/infrastructure/kustomization.yaml
+++ b/clusters/local/overlay/ron-mallory/infrastructure/kustomization.yaml
@@ -10,10 +10,11 @@ metadata:
 resources:
   - ../../../infrastructure
 
-# Optional: Add developer-specific customizations here
-# patchesStrategicMerge:
-#   - custom-patches.yaml
-#
-# resources:
-#   - developer-specific-resources.yaml
+# KIND-specific patches
+patches:
+  - path: metric-server-patch.yaml
+    target:
+      kind: Deployment
+      name: metrics-server
+      namespace: kube-system
 
