--- a/clusters/local/overlay/ron-mallory/infrastructure/kustomization.yaml
+++ b/clusters/local/overlay/ron-mallory/infrastructure/kustomization.yaml
@@ -11,7 +11,7 @@ resources:
   - ../../../infrastructure
 
 # KIND-specific patches
-patches:
+patchesJson6902:
   - path: metric-server-patch.yaml
     target:
       kind: Deployment
